--- a/source/index.html
+++ b/source/index.html
@@ -33,11 +33,11 @@
             <h3 class="programs__title programs__title--weight">
               Набор Массы
             </h3>
-            <p class="programs__description">
+            <p class="programs__description programs__description--weight">
               Заработать авторитет среди дворовых котов и даже собак? Серия
               Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
-            <a href="#" class="programs__link programs__link--arrow">Каталог Pro</a>
+            <a href="#" class="programs__link programs__link--arrow programs__link--weight">Каталог Pro</a>
           </div>
         </li>
       </ul>
@@ -87,21 +87,21 @@
         <dl class="motivation__list">
           <div class="motivation__item motivation__item--badge">
             <dt class="motivation__name motivation__name--badge">
-              снижение<br />
+              снижение
               веса
             </dt>
             <dd class="motivation__value">5 кг</dd>
           </div>
           <div class="motivation__item motivation__item--badge">
             <dt class="motivation__name motivation__name--badge">
-              затрачено<br />
+              затрачено
               времени
             </dt>
             <dd class="motivation__value motivation__value--days">60 дней</dd>
           </div>
           <div class="motivation__item">
             <dt class="motivation__name">Затраты на питание:</dt>
-            <dd class="motivation__value">15 000 РУБ.</dd>
+            <dd class="motivation__value motivation__value--price">15 000 РУБ.</dd>
           </div>
         </dl>
       </div>
