Адаптивная графика страниц

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <main class="profile">
-  <div class="page__centerer">
+  <div class="profile__heading page__centerer">
 
     <h1 class="profile__title">Подбор программы</h1>
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
