Корректирует элементы страницы

--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
             <dd class="motivation__value motivation__value--days">60 дней</dd>
           </div>
           <div class="motivation__item">
-            <dt class="motivation__name">Затраты на питание:</dt>
+            <dt class="motivation__name motivation__name--definition">Затраты на питание:</dt>
             <dd class="motivation__value motivation__value--price">15 000 РУБ.</dd>
           </div>
         </dl>
