Оптимизация графики страниц

--- a/source/form.html
+++ b/source/form.html
@@ -18,13 +18,13 @@
           <fieldset class="form__group form__group--info-pet">
             <legend class="visually-hidden">Информация о питомце</legend>
             <label for="name" class="form__label form__label--name">Имя:<sup>*</sup>
-              <input class="form__input form__input--info" type="text" id="name" placeholder="Барсик" required>
+              <input class="form__input form__input--info form__input--error" type="text" id="name" placeholder="Барсик" required>
             </label>
             <label class="form__label form__label--sb" for="weight">Вес (кг):<sup>*</sup>
-              <input class="form__input form__input--info" type="number" id="weight" placeholder="7" required>
+              <input class="form__input form__input--info form__input--error" type="number" id="weight" placeholder="7" required>
             </label>
             <label class="form__label form__label--sb" for="age">Возраст (лет):
-              <input class="form__input form__input--info" type="number" id="age" placeholder="7">
+              <input class="form__input form__input--info form__input--error" type="number" id="age" placeholder="7">
             </label>
           </fieldset>
           <fieldset class="form__filter--radio form__filter--border">
