Корректирует элементы страницы

--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
           <fieldset class="form__group form__group--info-pet">
             <legend class="visually-hidden">Информация о питомце</legend>
             <label for="name" class="form__label form__label--name">Имя:<sup>*</sup>
-              <input class="form__input form__input--info form__input--error" type="text" id="name" placeholder="Барсик" required>
+              <input class="form__input form__input--info form__input--error" type="text" id="name" placeholder="Барсик" required autofocus>
             </label>
             <label class="form__label form__label--sb" for="weight">Вес (кг):<sup>*</sup>
               <input class="form__input form__input--info form__input--error" type="number" id="weight" placeholder="7" required>
