Добавляет отступы в форме

--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
               <input class="form__input form__input--info form__input--error" type="number" id="age" placeholder="7">
             </label>
           </fieldset>
-          <fieldset class="form__filter--radio form__filter--border">
+          <fieldset class="form__filter-radio form__filter-radio--border">
             <legend class="visually-hidden">Нужды питомца</legend>
             <div class="form__filter-wrapper">
               <label class="form__label form__label--radio" for="weight-loss">
