Пиксель перфект доработан

--- a/source/form.html
+++ b/source/form.html
@@ -46,10 +46,10 @@
           </fieldset>
         </div>
         <fieldset class="form__contacts form__legend">
-          <legend class="form__legend form__legend--contacts">
+          <legend class="form__legend">
             <span class="form__title-wrapper">Контактные данные (владельца&nbsp;кота)</span>
           </legend>
-          <div class="form__group-contacts form__group-wrapper">
+          <div class="form__group-contacts">
             <label class="form__label form__label--email" for="email">E-mail:<sup>*</sup>
               <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
               <span class="form__icon form__icon--email"></span>
