--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
           </legend>
           <div class="form__group-contacts">
             <label class="form__label form__label--email" for="email">E-mail:<sup>*</sup>
-              <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
+              <input class="form__input form__input--email" type="email" id="email" placeholder="kuklachev@gmail.com" required>
               <span class="form__icon form__icon--email"></span>
             </label>
             <label class="form__label form__label--sb" for="phone">Телефон:<sup>*</sup>
@@ -62,7 +62,7 @@
         </fieldset>
         <fieldset class="form__comments form__legend">
           <legend class="form__legend form__legend--comment heading">Комментарий</legend>
-          <textarea class="form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+          <textarea class="form__feedback" name="comment" cols="30" rows="10" placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
         <fieldset class="form__add-ons form__legend">
           <legend class="form__legend form__legend--addons heading
